--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^0.8.5",
+    "bcrypt": ">=5.0.0",
     "body-parser": "^1.14.2",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "method-override": "^2.3.5",
-    "mongodb": "^2.0.52",
-    "mongoose": "^4.3.3"
+    "mongodb": ">=3.1.13",
+    "mongoose": ">=5.7.5"
   }
 }
